tests/fixtures/invalid/pow_dict_int_bool.py
# Cannot call pow() with Dict[str, int], Int, Bool
x = pow({"a": 1}, 1, True)
